--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
     "query-string": "^7",
     "react-basic-icon": "^1.0.8",
     "react-cms-firestore": "^1.1.0",
-    "react-forms-input": "^1.0.3",
+    "react-forms-input": "^1.0.4",
     "react-hoc-di": "^1.1.6",
-    "react-root-overlays": "^1.0.6",
-    "react-router-dom": "^5"
+    "react-root-overlays": "^1.0.6"
   },
   "peerDependencies": {
     "firebase": "^9",
     "react": "^17",
-    "react-dom": "^17"
+    "react-dom": "^17",
+    "react-router-dom": "^5"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.5",
