--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "editor"
   ],
   "scripts": {
-    "build": "npm run clean && babel src --out-dir dist --copy-files",
-    "clean": "rimraf dist"
+    "build": "npm run clean && babel src/lib --out-dir dist --copy-files",
+    "clean": "rimraf dist",
+    "test-env": "react-scripts start"
   },
   "dependencies": {
     "query-string": "^7",
@@ -40,6 +41,14 @@
     "@babel/preset-react": "^7.14.5",
     "rimraf": "3.0.2"
   },
+  "optionalDependencies": {
+    "firebase": "9.0.1",
+    "query-string": "7.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-router-dom": "5.3.0",
+    "react-scripts": "4.0.3"
+  },
   "main": "dist/index.js",
   "module": "dist/index.js",
   "files": [
@@ -58,8 +67,21 @@
     ],
     "plugins": []
   },
-  "browserslist": [
-    ">0.25%",
-    "not dead"
-  ]
+  "eslintConfig": {
+    "extends": [
+      "react-app"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.25%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
