--- a/package.json
+++ b/package.json
@@ -39,7 +39,11 @@
     "@babel/core": "^7.14.5",
     "@babel/preset-env": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
-    "rimraf": "3.0.2"
+    "rimraf": "3.0.2",
+    "react-scripts": "4.0.3",
+    "react": "^17",
+    "react-dom": "^17",
+    "react-router-dom": "^5"
   },
   "optionalDependencies": {
   },
