--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-cms-firestore-editor",
-  "version": "1.1.8",
+  "version": "1.1.9",
   "description": "An editor for react-cms-firestore. Edit cms data from the web. Easily integrate this into your own react website.",
   "author": "Will Tesler",
   "license": "Apache-2.0",
@@ -24,6 +24,7 @@
     "query-string": "^7",
     "react-basic-icon": "^1.0.8",
     "react-cms-firestore": "^1.1.0",
+    "react-firebase-login": "1.0.3",
     "react-forms-input": "^1.0.4",
     "react-hoc-di": "^1.1.6",
     "react-root-overlays": "^1.0.6"
@@ -45,8 +46,7 @@
     "react-dom": "^17",
     "react-router-dom": "^5"
   },
-  "optionalDependencies": {
-  },
+  "optionalDependencies": {},
   "main": "dist/index.js",
   "module": "dist/index.js",
   "files": [
