--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-cms-firestore-editor",
-  "version": "1.2.3",
+  "version": "1.2.8",
   "description": "An editor for react-cms-firestore. Edit cms data from the web. Easily integrate this into your own react website.",
   "author": "Will Tesler",
   "license": "Apache-2.0",
@@ -17,15 +17,16 @@
   ],
   "scripts": {
     "build": "npm run clean && babel src/lib --out-dir dist --copy-files",
+    "build_and_publish": "npm run build && npm publish",
     "clean": "rimraf dist",
     "test-env": "react-scripts start"
   },
   "dependencies": {
     "query-string": "^7",
     "react-basic-icon": "^1.0.8",
-    "react-cms-firestore": "^1.1.0",
-    "react-firebase-login": "^1.0.9",
-    "react-forms-input": "^1.0.4",
+    "react-cms-firestore": "^1.6.1",
+    "react-firebase-login": "^1.1.9",
+    "react-forms-input": "^1.1.7",
     "react-hoc-di": "^1.1.7",
     "react-root-overlays": "^1.0.9"
   },
