--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-cms-firestore-editor",
-  "version": "1.4.3",
+  "version": "1.4.5",
   "description": "An editor for react-cms-firestore. Edit cms data from the web. Easily integrate this into your own react website.",
   "author": "Will Tesler",
   "license": "Apache-2.0",
@@ -23,29 +23,28 @@
   },
   "dependencies": {
     "query-string": "^7",
-    "react-basic-icon": "^1.0.8",
-    "react-cms-firestore": "^1.7.0",
-    "react-firebase-login": "^1.1.9",
-    "react-forms-input": "^1.1.7",
-    "react-hoc-di": "^1.1.7",
-    "react-root-overlays": "^1.0.9"
+    "react-basic-icon": "^1.1.4",
+    "react-cms-firestore": "^1.7.3",
+    "react-firebase-login": "^1.2.2",
+    "react-forms-input": "^1.2.0",
+    "react-hoc-di": "^1.1.9",
+    "react-root-overlays": "^1.1.1"
   },
   "peerDependencies": {
     "firebase": "^9",
-    "react": "^17",
-    "react-dom": "^17",
-    "react-router-dom": "^5"
+    "react": "^18",
+    "react-dom": "^18",
+    "react-router-dom": "^6"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.5",
-    "@babel/core": "^7.14.5",
-    "@babel/preset-env": "^7.14.5",
-    "@babel/preset-react": "^7.14.5",
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.8",
+    "@babel/preset-react": "^7.16.7",
     "rimraf": "3.0.2",
-    "react-scripts": "5.0.0",
-    "react": "^17",
-    "react-dom": "^17",
-    "react-router-dom": "^5"
+    "react-scripts": "^5.0.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-router-dom": "^6"
   },
   "optionalDependencies": {},
   "main": "dist/index.js",
